frontend part done

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGODB_URL=mongodb+srv://bebetterchallanges:p8zU5IXn0rV9VmmO@cluster0.pvjhn1k.mongodb.net/
+EMAIL_ADDRESS_PASSWORD=ftfk qrdu naiu fvng
+EMAIL_ADDRESS=udaykpatel2004@gmail.com
